src/objects/c2g__OnlineInquiriesPersonalSetting__c.object
<CustomObject>
    <description>This object is deprecated.</description>
    <fields>
        <fullName>c2g__InquiryTemplate__c</fullName>
        <label>Inquiry Template</label>
        <referenceTo>c2g__InquiryTemplate__c</referenceTo>
        <relationshipName>OnlineInquiriesPersonalSettings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Key</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__Settings__c</fullName>
        <label>Settings</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>zDeprecated:Personal Setting</label>
    <nameField>
        <displayFormat>OEPS-{0000}</displayFormat>
        <label>Action Views Personal Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Personal Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>